Padding and border changes doesn't trigger relayout of children https://bugs.webkit.org/show_bug.cgi?id=109639

Reviewed by Kent Tamura.

Source/WebCore:

In RenderBlock::layoutBlock, we only relayout our children if our logical width
changes. This misses cases where our logical width doesn't change (i.e., padding
or border changes), but our content width does change.

Also convert the needsLayout ASSERT into the if statement. This is because
RenderScrollbarPart can change border widths and not need a layout if the scrollbar
doesn't have a parent. In this case, we don't need to set any children for layout.

This is a more general case of bug 104997.

Test: fast/block/dynamic-padding-border.html

* rendering/RenderBox.cpp:
(WebCore::borderOrPaddingLogicalWidthChanged): Only check if the logical width changed.
(WebCore::RenderBox::styleDidChange): Drop the border-box condition since this can happen
even without border-box box sizing.

LayoutTests:

* fast/block/dynamic-padding-border-expected.txt: Added.
* fast/block/dynamic-padding-border.html: Added.
* fast/table/border-collapsing/cached-change-row-border-width-expected.txt: We should have been relaying
out the table when the border changed. The pixel results in this case is the same, but the
render tree shows the difference.


Canonical link: https://commits.webkit.org/128293@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143092 268f45cc-cd09-0410-ab3c-d52691b4dbfc